--- a/package.json
+++ b/package.json
@@ -1,44 +1,46 @@
 {
-  "name": "stalkergear",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-	"format": "npx prettier --write ."
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.4.2",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@types/lodash": "^4.17.3",
-    "axios": "^1.6.8",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cookies-next": "^4.2.1",
-    "dotenv": "^16.4.5",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.378.0",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
-    "simple-oauth2": "^5.0.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/simple-oauth2": "^5.0.7",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+    "name": "stalkergear",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "npx prettier --write ."
+    },
+    "dependencies": {
+        "@hookform/resolvers": "^3.4.2",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-menubar": "^1.0.4",
+        "@radix-ui/react-navigation-menu": "^1.1.4",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@types/lodash": "^4.17.3",
+        "axios": "^1.6.8",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "cookies-next": "^4.2.1",
+        "dotenv": "^16.4.5",
+        "lodash": "^4.17.21",
+        "lucide-react": "^0.378.0",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.5",
+        "simple-oauth2": "^5.0.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/simple-oauth2": "^5.0.7",
+        "postcss": "^8",
+        "prettier": "^3.2.5",
+        "prettier-plugin-organize-imports": "^3.2.4",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
