--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.4.2",
+        "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-icons": "^1.3.0",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-menubar": "^1.0.4",
         "@radix-ui/react-navigation-menu": "^1.1.4",
+        "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@types/lodash": "^4.17.3",
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "cmdk": "^1.0.0",
         "cookies-next": "^4.2.1",
         "dotenv": "^16.4.5",
         "lodash": "^4.17.21",
