--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
         "cookies-next": "^4.2.1",
+        "dayjs": "^1.11.11",
         "dotenv": "^16.4.5",
         "lodash": "^4.17.21",
         "lucide-react": "^0.378.0",
