--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@radix-ui/react-navigation-menu": "^1.1.4",
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-toast": "^1.1.5",
         "@types/lodash": "^4.17.3",
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
@@ -32,6 +33,7 @@
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.5",
+        "react-spinners": "^0.13.8",
         "simple-oauth2": "^5.0.0",
         "tailwind-merge": "^2.3.0",
         "tailwindcss-animate": "^1.0.7",
