--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@radix-ui/react-popover": "^1.0.7",
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.5",
+        "@supabase/ssr": "^0.3.0",
+        "@supabase/supabase-js": "^2.43.4",
         "@types/lodash": "^4.17.3",
         "axios": "^1.6.8",
         "class-variance-authority": "^0.7.0",
