--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "format": "npx prettier --write ."
+        "format": "npx prettier --write .",
+        "gentypes": "npx supabase gen types typescript --project-id xdebtuiipnsnhinwcjre --schema public > src/lib/types/supabase.ts"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.4.2",
