--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "cookies-next": "^4.2.1",
         "dayjs": "^1.11.11",
         "dotenv": "^16.4.5",
+        "fs": "^0.0.1-security",
         "lodash": "^4.17.21",
         "lucide-react": "^0.378.0",
         "next": "14.2.3",
